# dell-fan

./: .gitignore  CMakeLists.txt  LICENSE  README.md
sources/: config.h  config.h.in  main.c
